--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Food_Product_Comparison_Android_App</string>
+    <string name="username_login">Username / Email</string>
+    <string name="password_login">Password</string>
+    <string name="login_cap">LOGIN</string>
 </resources>
