Login activity UI design in XML updated 19:16

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="username_login">Username or Email</string>
     <string name="password_login">Password</string>
     <string name="login_cap">LOGIN</string>
+    <string name="forgotten_password"><u>Forgotten password?</u></string>
     <string name="content_description_start_icon">A start icon displayed</string>
     <string name="content_description_end_icon">An end icon displayed</string>
 </resources>
