--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Scannera</string>
+    <string name="DEBUG_TAG">DEBUG</string>
+    <string name="LOG_TAG">LOG</string>
     <string name="username_login">Username or Email</string>
     <string name="password_login">Password</string>
     <string name="login_cap">LOGIN</string>
@@ -11,7 +13,6 @@
     <string name="facebook_app_id">487504102712984</string>
     <string name="fb_login_protocol_scheme">fb487504102712984</string>
     <string name="facebook_client_token">ff1e8ddff27b8f12ed114806eb47abd5</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="first_name_sign_up">First name</string>
 
 </resources>
