--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,25 @@
 <resources>
     <string name="app_name">Scannera</string>
+    <string name="facebook_app_id">487504102712984</string>
+    <string name="fb_login_protocol_scheme">fb487504102712984</string>
+    <string name="facebook_client_token">ff1e8ddff27b8f12ed114806eb47abd5</string>
     <string name="DEBUG_TAG">DEBUG</string>
     <string name="LOG_TAG">LOG</string>
     <string name="username_login">Username or Email</string>
     <string name="password_login">Password</string>
     <string name="login_cap">LOGIN</string>
+    <string name="or_login_with">Or login with</string>
     <string name="signup_cap">SIGN UP</string>
     <string name="forgotten_password"><u>Forgotten password?</u></string>
     <string name="dont_have_an_acc_tv">Don\'t have an account?</string>
     <string name="content_description_start_icon">A start icon displayed</string>
     <string name="content_description_end_icon">An end icon displayed</string>
-    <string name="facebook_app_id">487504102712984</string>
-    <string name="fb_login_protocol_scheme">fb487504102712984</string>
-    <string name="facebook_client_token">ff1e8ddff27b8f12ed114806eb47abd5</string>
-    <string name="first_name_sign_up">First name</string>
-
+    <string name="create_account">Create Account</string>
+    <string name="username_sign_up">Username</string>
+    <string name="first_name_sign_up">First Name</string>
+    <string name="last_name_sign_up">Last Name</string>
+    <string name="email_sign_up">Email Address</string>
+    <string name="phone_sign_up">Phone Number</string>
+    <string name="password_sign_up">Password</string>
+    <string name="confirm_password_sign_up">Confirm Password</string>
 </resources>
