--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="dont_have_an_acc_tv">Don\'t have an account?</string>
     <string name="content_description_start_icon">A start icon displayed</string>
     <string name="content_description_end_icon">An end icon displayed</string>
+    <string name="back_btn_content_description">A back button</string>
+    <string name="close_btn_content_description">A close button</string>
     <string name="create_account">Create Account</string>
     <string name="username_sign_up">Username</string>
     <string name="first_name_sign_up">First Name</string>
