Fixed facebook login bug. Implemented user profile image who login with facebook or google can have their profile image shown.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="home">Home</string>
     <string name="me">Me</string>
     <string name="logout">Log Out</string>
+    <string name="contribution_score">Contribution: </string>
 </resources>
