--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="scan_history">Scan History</string>
     <string name="settings">Settings</string>
     <string name="scan_a_barcode">Scan a barcode</string>
+    <string name="home_greeting">Hi,</string>
 </resources>
