--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="me">Me</string>
     <string name="logout">Log Out</string>
     <string name="contribution_score">Contribution: </string>
+    <string name="starred">Starred products</string>
     <string name="scan_history">Scan History</string>
     <string name="settings">Settings</string>
     <string name="scan_a_barcode">Scan a barcode</string>
