--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,7 @@
     <string name="facebook_app_id">487504102712984</string>
     <string name="fb_login_protocol_scheme">fb487504102712984</string>
     <string name="facebook_client_token">ff1e8ddff27b8f12ed114806eb47abd5</string>
-    <string name="DEBUG_TAG">DEBUG</string>
-    <string name="LOG_TAG">LOG</string>
+    <string name="google_ps_missing_msg">Google Play Store is required for Google Sign in, but it\'s missing.</string>
     <string name="username_login">Username or Email</string>
     <string name="password_login">Password</string>
     <string name="login">Login</string>
