--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="contribution_score">Contribution: </string>
     <string name="starred">Starred products</string>
     <string name="scan_history">Scan History</string>
-    <string name="settings">Settings</string>
+    <string name="about_us">About Us</string>
     <string name="scan_a_barcode">Scan a barcode</string>
     <string name="home_greeting">Hi,</string>
     <string name="dialog_camera_permission_title">Camera Access Not Enabled</string>
