--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="feedback">Feedback</string>
     <string name="feedback_et_hint">Please write your feedback here</string>
     <string name="submit">Submit</string>
+    <string name="rating_empty">Please give us a rate :D</string>
     <string name="feedback_empty">Please let us know what you thought by writing some feedback :D</string>
     <string name="feedback_success">Successfully submitted! Thank you very much for your feedback!</string>
 </resources>
