Updated scan mode to single, works much better. Created capture product activity named as ProductFeedActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
         would you like to manually contribute the product information?</string>
     <string name="not_now">Not now</string>
     <string name="sure">Sure</string>
+    <string name="contribute_new_product">Contribute a New Product</string>
 </resources>
