--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,12 @@
     <string name="retake_tvbtn"><u>retake</u></string>
     <string name="edit_tvbtn"><u>edit</u></string>
     <string name="editing">editing…</string>
+    <string name="close">Close</string>
     <string name="confirm">Confirm</string>
+    <string name="edit">Edit</string>
+    <string name="enter_info_hint">Please enter the information here</string>
+    <string name="next">Next</string>
+
+    <!-- ERROR STRINGS -->
+    <string name="error_input_must_not_be_empty">This field must not be empty.</string>
 </resources>
