--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="close">Close</string>
     <string name="confirm">Confirm</string>
     <string name="edit">Edit</string>
+    <string name="edit_category">Edit Product Category:</string>
     <string name="enter_info_hint">Please enter the information here</string>
     <string name="next">Next</string>
 
