Updated to capture nutritional table photo section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="edit_category">Edit Product Category:</string>
     <string name="enter_info_hint">Please enter the information here</string>
     <string name="next">Next</string>
+    <string name="capture">Capture</string>
 
     <!-- Category Dropdown Menu String Array -->
     <string-array name="categories">
