Implemented on nutrition table picture received matters.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,6 @@
         <item>Food</item>
     </string-array>
 
-    <!-- ERROR STRINGS -->
+    <!-- ERROR MESSAGES -->
     <string name="error_input_must_not_be_empty">This field must not be empty.</string>
 </resources>
