Implemented the first version of the product cardview, added the relevant attributes to the product class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,10 +13,6 @@
     <string name="signup">Sign Up</string>
     <string name="forgotten_password"><u>Forgotten password?</u></string>
     <string name="dont_have_an_acc_tv">Don\'t have an account?</string>
-    <string name="content_description_start_icon">A start icon displayed</string>
-    <string name="content_description_end_icon">An end icon displayed</string>
-    <string name="back_btn_content_description">A back button</string>
-    <string name="close_btn_content_description">A close button</string>
     <string name="create_account">Create Account</string>
     <string name="username_sign_up">Username</string>
     <string name="first_name_sign_up">First Name</string>
@@ -70,12 +66,10 @@
     <string name="contribute_new_product">Contribute a New Product</string>
     <string name="product_brand">Product Brand:</string>
     <string name="product_name">Product Name:</string>
-    <string name="product_price">Product Price:</string>
+    <string name="product_price">Product Original Price:</string>
     <string name="product_category">Product Category:</string>
     <string name="product_nutritional_info">Product Nutritional Information:</string>
     <string name="product_look">Product Look Picture:</string>
-    <string name="nutritional_pic_content_description">A picture of the product\'s nutritional table taken by the user.</string>
-    <string name="product_look_content_description">A picture of the product look taken by the user.</string>
     <string name="retake_tvbtn"><u>retake</u></string>
     <string name="category_drop_down_menu_hint">Please select or enter a category</string>
     <string name="edit_tvbtn"><u>edit</u></string>
@@ -126,4 +120,13 @@
 
     <!-- ERROR MESSAGES -->
     <string name="error_input_cannot_be_empty">This field cannot be empty.</string>
+
+    <!-- ACCESSIBILITY RELATED CONTENT DESCRIPTIONS -->
+    <string name="content_description_start_icon">A start icon displayed</string>
+    <string name="content_description_end_icon">An end icon displayed</string>
+    <string name="back_btn_content_description">A back button</string>
+    <string name="close_btn_content_description">A close button</string>
+    <string name="nutritional_pic_content_description">A picture of the product\'s nutritional table taken by the user.</string>
+    <string name="product_look_content_description">A picture of the product look taken by the user.</string>
+    <string name="product_star_btn_content_description">A Star button for starring the product.</string>
 </resources>
