--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,16 @@
     <string name="next">Next</string>
     <string name="capture">Capture</string>
     <string name="product_comparisons">Product Comparisons</string>
+    <string name="username_label">Username:</string>
+    <string name="firstname_label">Firstname:</string>
+    <string name="lastname_label">Lastname:</string>
+    <string name="email_label">Email Address:</string>
+    <string name="Password_label">Password:</string>
+    <string name="username_default">/{username}</string>
+    <string name="firstname_default">/{firstname}</string>
+    <string name="lastname_default">/{lastname}</string>
+    <string name="email_default">/{email address}</string>
+    <string name="password_default">/{password}</string>
 
     <!-- Category Dropdown Menu String Array -->
     <string-array name="categories">
