--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
     <string name="dont_have_an_acc_tv">Don\'t have an account?</string>
     <string name="create_account">Create Account</string>
     <string name="username_sign_up">Username</string>
-    <string name="first_name_sign_up">First Name</string>
-    <string name="last_name_sign_up">Last Name</string>
+    <string name="firstname_sign_up">First Name</string>
+    <string name="lastname_sign_up">Last Name</string>
     <string name="email_sign_up">Email Address</string>
     <string name="password_sign_up">Password</string>
     <string name="confirm_password_sign_up">Confirm Password</string>
@@ -74,7 +74,6 @@
     <string name="retake_tvbtn"><u>retake</u></string>
     <string name="category_drop_down_menu_hint">Please select or enter a category</string>
     <string name="edit_tvbtn"><u>edit</u></string>
-    <string name="editing">editing…</string>
     <string name="close">Close</string>
     <string name="confirm">Confirm</string>
     <string name="edit">Edit</string>
@@ -86,12 +85,12 @@
     <string name="username_label">Username:</string>
     <string name="firstname_label">Firstname:</string>
     <string name="lastname_label">Lastname:</string>
-    <string name="email_label">Email Address:</string>
-    <string name="Password_label">Password:</string>
+    <string name="email_address_label">Email Address:</string>
+    <string name="password_label">Password:</string>
     <string name="username_default">/{username}/</string>
     <string name="firstname_default">/{firstname}/</string>
     <string name="lastname_default">/{lastname}/</string>
-    <string name="email_default">/{email address}/</string>
+    <string name="email_address_default">/{email address}/</string>
     <string name="password_default">/{password}/</string>
 
     <!-- Category Dropdown Menu String Array -->
