Changed the top back button of the scan history and starred products activities to be embedded in the toolbar to avoid any related annoying layout related problems

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,6 +144,7 @@
     <string name="email_address_invalid">Please enter a valid Email Address.</string>
 
     <!-- ACCESSIBILITY RELATED CONTENT DESCRIPTIONS -->
+    <string name="home_collapsing_image_content_description">An image related to this App activity</string>
     <string name="content_description_start_icon">A start icon displayed</string>
     <string name="content_description_end_icon">An end icon displayed</string>
     <string name="back_btn_content_description">A back button</string>
