Implemented the first part of product comparisons. Implemented a feature that enlarges the image in the product comparisons activity on image click.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,11 @@
     </string>
     <string name="cancel">Cancel</string>
     <string name="confirm_red"><font fgcolor='#A80825'>Confirm</font></string>
+    <string name="category">Category:</string>
+    <string name="name">Name:</string>
+    <string name="brand">Brand:</string>
+    <string name="price">Price:</string>
+
 
     <!-- Category Dropdown Menu String Array -->
     <string-array name="categories">
