--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="name">Name:</string>
     <string name="brand">Brand:</string>
     <string name="price">Price:</string>
+    <string name="nutri_info">Nutritional Information:</string>
 
 
     <!-- Category Dropdown Menu String Array -->
