set up the tab layout in comparisons activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="brand">Brand:</string>
     <string name="price">Price:</string>
     <string name="nutri_info">Nutritional Information:</string>
+    <string name="similar_products">Similar Products</string>
 
 
     <!-- Category Dropdown Menu String Array -->
