--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,6 @@
     <string name="dialog_btn_enable">Enable</string>
     <string name="search">Search</string>
     <string name="barcode_scanner_title">Scan Barcode</string>
-    <string name="barcode_scanner_hint">Point your camera at a barcode to scan</string>
     <string name="about_us_description">
         This App is built by 3 Computer Science students from Monash University as an university project.
         It is aimed to help Australian customers avoid their needs of reading the packages,
@@ -48,7 +47,6 @@
     <string name="provide_feedback">Provide Feedback</string>
     <string name="rating_feedback_prompt">If you are interested in, please rate us and let us know how we are doing! We are always trying to improve and your feedback is invaluable!</string>
     <string name="feedback">Feedback</string>
-    <string name="feedback_et_hint">Please write your feedback here</string>
     <string name="submit">Submit</string>
     <string name="rating_empty">Please give us a rate :D</string>
     <string name="feedback_empty">Please let us know what you thought by writing some feedback :D</string>
@@ -69,13 +67,11 @@
     <string name="product_nutritional_info">Product Nutritional Information:</string>
     <string name="product_look">Product Look Picture:</string>
     <string name="retake_tvbtn"><u>retake</u></string>
-    <string name="category_drop_down_menu_hint">Please select or enter a category</string>
     <string name="edit_tvbtn"><u>edit</u></string>
     <string name="close">Close</string>
     <string name="confirm">Confirm</string>
     <string name="edit">Edit</string>
     <string name="edit_category">Edit Product Category:</string>
-    <string name="enter_info_hint">Please enter the information here</string>
     <string name="next">Next</string>
     <string name="capture">Capture</string>
     <string name="product_comparisons">Product Comparisons</string>
@@ -102,6 +98,7 @@
     <string name="price">Price:</string>
     <string name="nutri_info">Nutritional Information:</string>
     <string name="similar_products">Similar Products</string>
+    <string name="sort_by">Sort by:</string>
 
 
     <!-- Category Dropdown Menu String Array -->
@@ -150,7 +147,13 @@
     <string name="error_input_cannot_be_empty">This field cannot be empty.</string>
     <string name="email_address_invalid">Please enter a valid Email Address.</string>
 
-    <!-- ACCESSIBILITY RELATED CONTENT DESCRIPTIONS -->
+    <!-- ACCESSIBILITY RELATED -->
+    <string name="barcode_scanner_hint">Point your camera at a barcode to scan</string>
+    <string name="enter_info_hint">Please enter the information here</string>
+    <string name="feedback_et_hint">Please write your feedback here</string>
+    <string name="category_drop_down_menu_hint">Please select or enter a category</string>
+    <string name="sort_by_selection_hint">Please select one to sort the products</string>
+
     <string name="login_title_image">A symbolic image of Scannera App</string>
     <string name="home_collapsing_image_content_description">A symbolic activity image related to Scannera App</string>
     <string name="content_description_start_icon">A start icon displayed</string>
