--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="about_us">About Us</string>
     <string name="scan_a_barcode">Scan a barcode</string>
     <string name="home_greeting">Hi,</string>
+    <string name="home_recommendation_title">Products you may like:</string>
     <string name="dialog_camera_permission_title">Camera Access Not Enabled</string>
     <string name="dialog_camera_permission_msg">Camera permission is required to proceed this activity, enable access via "Settings" -> "App info" -> "Scannera".</string>
     <string name="dialog_btn_reject">Reject</string>
